--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body style="background-color: rgb(255, 255, 255)">
     <p>The button below will switch background color!</p>
     <button onclick="dark()">Switch color</button>
+    <a href="index2.html">next</a>
     
     
     <script>
