--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color: rgb(255, 255, 255)">
     <p>The button below will switch background color!</p>
-    <button onclick="dark()">Switch color</button>
+    <button onclick="darker()">Switch color</button>
     <a href="index.html">next</a>
     
     
