--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head >
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Toggle Page 1</title>
 </head>
 <body style="background-color: rgb(255, 255, 255)">
     <p>The button below will switch background color!</p>
