--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body style="background-color: rgb(255, 255, 255)">
     <p>The button below will switch background color!</p>
     <button onclick="theme()">Switch color</button>
-    <a href="index2.html">next</a>
+    <a href="index2.html">next</a><br>
+    <h2>Hello</h2>
     
     
     <script>
