--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head></head>
-<body><iframe src="content.php?url=http://google.com">
+    <body><iframe src="content.php?url=http://google.com"></iframe>
     
 </body>
 </html>
