--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head><? $content = file_get_contents('http://bing.com'); ?></head>
-    <body><div hidden><?php echo $content ?></div>
+    <body><div id="content" hidden><?php echo $content ?></div>
     
 </body>
 </html>
