--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
-    <head><? $content = file_get_contents('http://bing.com'); ?></head>
-    <body><div id="content" hidden><?php echo $content ?></div>
+    <head></head>
+    <body><div id="content" hidden><iframe src="content.php?url=https://bing.com"></iframe></div>
     
 </body>
 </html>
